--- a/sl/browser/chrome/browser/loop/loop.properties
+++ b/sl/browser/chrome/browser/loop/loop.properties
@@ -97,7 +97,8 @@ new_contact_button=Nov stik
 ## and click the 'New Contact' button to see the fields.
 new_contact_name_placeholder=Ime
 new_contact_email_placeholder=E-pošta
-new_contact_phone_placeholder=Telefon Firefox OS
+new_contact_fxos_phone_placeholder=Telefon Firefox OS
+new_contact_phone_placeholder2=Telefon
 
 contacts_blocked_contacts=Zavrnjeni stiki
 
@@ -122,17 +123,13 @@ importing_contacts_progress_button=Uvažanje …
 ## LOCALIZATION NOTE(sync_contacts_button): This button is displayed in place of
 ## importing_contacts_button once contacts have been imported once.
 sync_contacts_button=Sinhroniziraj stike
+
 ## LOCALIZATION NOTE(import_failed_description simple): Displayed when an import of
 ## contacts fails. This is displayed in the error field here:
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
 import_failed_description_simple=Uvoz stikov žal ni uspel
-## LOCALIZATION NOTE(import_failed_description): Displayed when an import of contacts
-## fails and the user may need more help. In this item, don't translate the part between
-## {{..}} because this will be replaced by the label from import_failed_support_link_label.
-## This is displayed in the error field here:
-## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
-import_failed_description=Uvoz stikov žal ni uspel. Za pomoč se obrnite na {{import_failed_support_link_label}}
-import_failed_support_link_label=strani s podporo
+import_failed_description_some=Nekaterih stikov ni bilo mogoče uvoziti
+import_failed_support_button=Pomoč
 
 ## LOCALIZATION NOTE(remove_contact_menu_button): Displayed in the contact list in
 ## a pop-up menu next to the contact's name.
@@ -309,6 +306,8 @@ rooms_list_delete_tooltip=Izbriši pogovor
 rooms_list_deleteConfirmation_label=Ste prepričani?
 rooms_list_no_current_conversations=Ni trenutnih pogovorov
 rooms_name_this_room_label=Poimenuj pogovor
+rooms_name_this_room_tooltip2=Kliknite za urejanje imena pogovora
+rooms_name_change_failed_label=Pogovora ni mogoče preimenovati
 rooms_new_room_button_label=Začni pogovor
 rooms_only_occupant_label=Ste prvi udeleženec.
 rooms_panel_title=Izberite pogovor ali začnite novega
@@ -317,3 +316,4 @@ rooms_room_full_call_to_action_nonFx_label=Prenesite {{brandShortname}}, če že
 rooms_room_full_call_to_action_label=Več o {{clientShortname}} »
 rooms_room_joined_label=Nekdo se je pridružil pogovoru!
 rooms_room_join_label=Pridruži se pogovoru
+rooms_signout_alert=Odprti pogovori bodo končani
