--- a/sl/browser/chrome/browser/browser.properties
+++ b/sl/browser/chrome/browser/browser.properties
@@ -295,7 +295,7 @@ identity.identified.verified_by_you=Za to stran ste dodali varnostno izjemo
 identity.identified.state_and_country=%S, %S
 
 identity.encrypted2=Povezava na spletno stran je varna.
-identity.mixed_display_loaded=Povezava na spletno stran ni povsem varna, ker vsebuje nešifrirane elemente (npr. slike).
+identity.broken_loaded=Povezava na spletno stran ni povsem varna, ker vsebuje nešifrirane elemente (npr. slike) ali šifriranje ni dovolj močno.
 identity.mixed_active_loaded2=Spletna stran vsebuje interaktivno vsebino, ki ni šifrirana (npr. skripti). Tretje osebe lahko vidijo vaše podatke ali spreminjajo obnašanje strani.
 identity.unencrypted=Vaša povezava na spletno stran ni šifrirana.
 
