--- a/sl/browser/chrome/browser/shellservice.properties
+++ b/sl/browser/chrome/browser/shellservice.properties
@@ -17,7 +17,13 @@ setDefaultBrowserNotNow.accesskey  = N
 setDefaultBrowserNever.label       = Ne sprašuj več
 setDefaultBrowserNever.accesskey   = S
 
+# LOCALIZATION NOTE (setDefaultBrowserTitle, setDefaultBrowserMessage, setDefaultBrowserDontAsk):
+# These strings are used as an alternative to the ones above, in a modal dialog.
+# %S will be replaced by brandShortName
+setDefaultBrowserTitle=Privzet brskalnik
+setDefaultBrowserMessage=%S trenutno ni nastavljen kot privzet brskalnik. Ga želite nastaviti kot privzetega?
+setDefaultBrowserDontAsk=Vedno preveri ob zagonu %Sa.
 
-desktopBackgroundLeafNameWin=Ozadje_namizja.bmp
-DesktopBackgroundDownloading=Shranjevanje slike ...
+desktopBackgroundLeafNameWin=Ozadje namizja.bmp
+DesktopBackgroundDownloading=Shranjevanje slike …
 DesktopBackgroundSet=Nastavi ozadje namizja
