--- a/sl/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/sl/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -97,8 +97,10 @@ quit-button.tooltiptext.linux2 = Končaj %1$S (%2$S)
 # %2$S is the keyboard shortcut
 quit-button.tooltiptext.mac = Končaj %1$S (%2$S)
 
-loop-call-button2.label = Začni pogovor
-loop-call-button2.tooltiptext = Začni pogovor
+# LOCALIZATION NOTE(loop-call-button3.label): This is a brand name, request
+# approval before you change it.
+loop-call-button3.label = Hello
+loop-call-button3.tooltiptext = Začni pogovor
 
 social-share-button.label = Deli to stran
 social-share-button.tooltiptext = Deli to stran
@@ -111,5 +113,6 @@ web-apps-button.tooltiptext = Odkrij aplikacije
 
 # LOCALIZATION NOTE(devtools-webide-button.label, devtools-webide-button.tooltiptext):
 # widget is only visible after WebIDE has been started once (Tools > Web Developers > WebIDE)
-devtools-webide-button.label = WebIDE
-devtools-webide-button.tooltiptext = Odpri WebIDE
+# %S is the keyboard shortcut
+devtools-webide-button2.label = WebIDE
+devtools-webide-button2.tooltiptext = Odpri WebIDE (%S)
