Devtools: GCLI commands, Inspector and Profiler

--- a/sl/browser/chrome/browser/devtools/gclicommands.properties
+++ b/sl/browser/chrome/browser/devtools/gclicommands.properties
@@ -20,6 +20,10 @@ helpDesc=Pomoč o ukazih
 # explain the contents of the command help table.
 helpAvailable=Ukazi na voljo
 
+# LOCALIZATION NOTE (notAvailableInE10S) Used in the output of any command that
+# is not compatible with multiprocess mode (E10S).
+notAvailableInE10S=Ukaz '%1$S' ni na voljo v večprocesnem načinu (E10S)
+
 # LOCALIZATION NOTE (consoleDesc) A very short string used to describe the
 # function of the console command.
 consoleDesc=Ukazi za delo s konzolo
