--- a/sl/browser/chrome/browser/devtools/timeline.properties
+++ b/sl/browser/chrome/browser/devtools/timeline.properties
@@ -38,4 +38,30 @@ timeline.records=ZAPISI
 timeline.label.styles=Slog
 timeline.label.reflow=Prerazporeditev
 timeline.label.paint=Barvanje
+timeline.label.javascript=Javascript
 timeline.label.domevent=Dogodek DOM
+timeline.label.consoleTime=Konzola
+
+# LOCALIZATION NOTE (graphs.memory):
+# This string is displayed in the memory graph of the Performance tool,
+# as the unit used to memory consumption. This label should be kept
+# AS SHORT AS POSSIBLE so it doesn't obstruct important parts of the graph.
+graphs.memory=MB
+
+# LOCALIZATION NOTE (timeline.markerDetailFormat):
+# Some timeline markers come with details, like a size, a name, a js function.
+# %1$S is replaced with one of the above label (timeline.label.*) and %2$S
+# with the details. For examples: Paint (200x100), or console.time (FOO)
+timeline.markerDetailFormat=%1$S (%2$S)
+
+# LOCALIZATION NOTE (time.markerDetail.*):
+# Strings used in the waterfall sidebar.
+timeline.markerDetail.start=Začetek:
+timeline.markerDetail.end=Konec:
+timeline.markerDetail.duration=Trajanje:
+timeline.markerDetail.consoleTimerName=Ime časovnika:
+timeline.markerDetail.DOMEventType=Vrsta dogodka:
+timeline.markerDetail.DOMEventPhase=Stopnja:
+timeline.markerDetail.DOMEventTargetPhase=Tarča
+timeline.markerDetail.DOMEventCapturingPhase=Zajemanje
+timeline.markerDetail.DOMEventBubblingPhase=Žuborenje
