--- a/sl/browser/chrome/browser/devtools/webconsole.properties
+++ b/sl/browser/chrome/browser/devtools/webconsole.properties
@@ -113,7 +113,7 @@ unknownLocation=<neznano>
 # LOCALIZATION NOTE (timerStarted):
 # This string is used to display the result of the console.time() call.
 # %S=name of timer
-timerStarted=%S: časomer zagnan
+timerStarted=%S: časovnik zagnan
 
 # LOCALIZATION NOTE (timeEnd):
 # This string is used to display the result of the console.timeEnd() call.
@@ -129,7 +129,7 @@ noCounterLabel=<ni oznake>
 # doesn't matches to any property in the content.
 Autocomplete.blank=  <- ni zadetkov
 
-maxTimersExceeded=Največje dovoljeno število merilnikov časa na strani je bilo preseženo.
+maxTimersExceeded=Največje dovoljeno število časovnikov na strani je bilo preseženo.
 
 # LOCALIZATION NOTE (maxCountersExceeded): Error message shown when the maximum
 # number of console.count()-counters was exceeded.
