--- a/sl/mobile/android/chrome/browser.properties
+++ b/sl/mobile/android/chrome/browser.properties
@@ -276,7 +276,7 @@ inputWidgetHelper.clear=Počisti
 # Web Console API
 stacktrace.anonymousFunction=<anonimno>
 stacktrace.outputMessage=Sled sklada v %S, funkcija %S, vrstica %S.
-timer.start=%S: časomer zagnan
+timer.start=%S: časovnik zagnan
 
 # LOCALIZATION NOTE (timer.end):
 # This string is used to display the result of the console.timeEnd() call.
