--- a/sl/browser/chrome/browser/devtools/toolbox.properties
+++ b/sl/browser/chrome/browser/devtools/toolbox.properties
@@ -78,3 +78,8 @@ options.darkTheme.label=Temna tema
 # LOCALIZATION NOTE (options.lightTheme.label)
 # Used as a label for light theme
 options.lightTheme.label=Svetla tema
+
+# LOCALIZATION NOTE (toolbox.noContentProcess.message)
+# Used as a message in the alert displayed when trying to open a browser
+# content toolbox and there is no content process running
+toolbox.noContentProcess.message=Noben vsebinski proces ne teče.
