--- a/sl/browser/chrome/browser/devtools/webide.properties
+++ b/sl/browser/chrome/browser/devtools/webide.properties
@@ -42,6 +42,8 @@ error_cantConnectToApp=Povezava z aplikacijo ni mogoča: %1$S
 # Variable: error message (in english)
 error_cantFetchAddonsJSON=Ni mogoče pridobiti seznama dodatkov: %S
 
+error_appProjectsLoadFailed=Ni mogoče naložiti seznama projektov. To se lahko zgodi, če ste ta profil uporabljali z novejšo različico Firefoxa.
+
 addons_stable=stabilen
 addons_unstable=nestabilen
 # LOCALIZATION NOTE (addons_simulator_label): This label is shown as the name of
@@ -52,6 +54,7 @@ addons_simulator_label=Firefox OS %1$S Simulator (%2$S)
 addons_install_button=namesti
 addons_uninstall_button=odstrani
 addons_adb_label=Dodatek ADB Helper
+addons_adapters_label=Dodatek Tools Adapters
 addons_adb_warning=Naprav USB brez tega dodatka ne bo moč zaznati
 addons_status_unknown=?
 addons_status_installed=Nameščen
@@ -71,3 +74,6 @@ status_valid=VELJAVNO
 status_warning=OPOZORILA
 status_error=NAPAKE
 status_unknown=NEZNANO
+
+# Preferences
+devicepreferences_reset_default=Ponastavi privzeto
