a few more, including spelling fix in Lightning

--- a/ga-IE/toolkit/chrome/global/aboutSupport.properties
+++ b/ga-IE/toolkit/chrome/global/aboutSupport.properties
@@ -83,6 +83,6 @@ webglRenderer = Rindreálaí WebGL
 minLibVersions = Leagan is sine a rabhthas ag súil leis
 loadedLibVersions = Leagan in úsáid
 
-hasSeccompBPF = Seccomp-BPF (System Call Filtering)
+hasSeccompBPF = Seccomp-BPF (Scagadh Glaonna Córais)
 canSandboxContent = Content Process Sandboxing
 canSandboxMedia = Media Plugin Sandboxing
