--- a/ga-IE/webapprt/webapprt/overrides/appstrings.properties
+++ b/ga-IE/webapprt/webapprt/overrides/appstrings.properties
@@ -20,7 +20,7 @@ isprinting=Ní féidir cáipéis a athrú le linn a phriontála, nó mar réamha
 deniedPortAccess=Rinne an feidhmchlár iarracht port líonra a rochtain ach nach bhfuil cead aige. Chealaigh an feidhmchlár an t-iarratas ar mhaithe le do shlándáil.
 proxyResolveFailure=Tá an feidhmchlár cumraithe le haghaidh úsáide seachfhreastalaí nach féidir a aimsiú.
 proxyConnectFailure=Tá an feidhmchlár cumraithe le haghaidh úsáide seachfhreastalaí atá ag diúltú le ceangail.
-contentEncodingError=The application received a response from a server which used an invalid or unsupported form of compression.
+contentEncodingError=Fuair an feidhmchlár freagra ó fhreastalaí a bhain úsáid as modh comhbhrúite nach dtacaítear leis, nó atá neamhbhailí.
 unsafeContentType=Ní féidir leis an bhfeidhmchlár dul ar aghaidh toisc gur úsáid sé cineál comhaid a d'fhéadfadh a bheith baolach le hoscailt. Téigh i dteagmháil le húdair an fheidhmchláir leis an fhadhb seo a chur in iúl dóibh, le do thoil.
 externalProtocolTitle=Iarratas ar Phrótacal Seachtrach
 externalProtocolPrompt=Ní mór feidhmchlár seachtrach a thosú chun na naisc %1$S: a láimhseáil.\n\n\nIarradh:\n\n%2$S\n\nFeidhmchlár: %3$S\n\n\nMura raibh tú ag súil leis an iarratas seo b'fhéidir gur iarracht atá ann chun leas a bhaint as laige san fheidhmchlár sin. Cealaigh an t-iarratas seo mura bhfuil tú cinnte nach bhfuil sé mailíseach.\n
@@ -31,5 +31,5 @@ externalProtocolLaunchBtn=Cuir Feidhmchlár ar Siúl
 malwareBlocked=Tuairiscíodh gur suíomh ionsaithe é an suíomh %S agus tá cosc curtha air de bharr do roghanna slándála.
 phishingBlocked=Gach seans gur dearadh suíomh Gréasáin %S chun faisnéis phearsanta nó airgeadais a fháil le cleas ó dhaoine.
 cspBlocked=Rinne an feidhmchlár seo iarracht acmhainn a úsáid a bhfuil polasaí slándála inneachair aici a chuireann bac ar í a bheith luchtaithe mar seo.
-corruptedContentError=The application cannot continue loading because an error in the data transmission was detected.
+corruptedContentError=Ní féidir leis an bhfeidhmchlár dul ar aghaidh agus an leathanach a luchtú; tharla earráid agus na sonraí á seoladh.
 remoteXUL=Rinne an feidhmchlár seo iarracht úsáid a bhaint as teicneolaíocht nach dtacaítear léi a thuilleadh.
