--- a/ga-IE/webapprt/webapprt/overrides/dom.properties
+++ b/ga-IE/webapprt/webapprt/overrides/dom.properties
@@ -61,8 +61,8 @@ OwnerElementWarning=Moltar gan aitreabúid 'ownerElement' de chuid aitreabúide 
 NodeValueWarning=Moltar gan aitreabúid 'nodeValue' de chuid aitreabúide a úsáid a thuilleadh. Úsáid 'value' ina ionad.
 TextContentWarning=Moltar gan aitreabúid 'textContent' de chuid aitreabúide a úsáid a thuilleadh. Úsáid 'value' ina ionad.
 EnablePrivilegeWarning=Use of enablePrivilege is deprecated. Please use code that runs with the system principal (e.g. an extension) instead.
-nsIJSONDecodeDeprecatedWarning=nsIJSON.decode is deprecated. Please use JSON.parse instead.
-nsIJSONEncodeDeprecatedWarning=nsIJSON.encode is deprecated. Please use JSON.stringify instead.
+nsIJSONDecodeDeprecatedWarning=Ní mholtar nsIJSON.decode a úsáid a thuilleadh. Bain úsáid as JSON.parse ina ionad.
+nsIJSONEncodeDeprecatedWarning=Ní mholtar nsIJSON.encode a úsáid a thuilleadh. Bain úsáid as JSON.stringify ina ionad.
 nsIDOMWindowInternalWarning=Ní mholtar nsIDOMWindowInternal a úsáid a thuilleadh. Bain úsáid as nsIDOMWindow ina ionad.
 InputEncodingWarning=Ní mholtar inputEncoding a úsáid a thuilleadh.
 # LOCALIZATION NOTE: Do not translate "MozBeforePaint" and "mozRequestAnimationFrame"
@@ -125,17 +125,17 @@ PluginHangUIMessage=Seans go bhfuil %S gnóthach, nó níl sé ag freagairt. Tig
 PluginHangUIWaitButton=Lean ar aghaidh
 PluginHangUIStopButton=Stop an forlíontán
 # LOCALIZATION NOTE: Do not translate "mozHidden", "mozVisibilityState", "hidden", or "visibilityState"
-PrefixedVisibilityApiWarning='mozHidden' and 'mozVisibilityState' are deprecated. Please use the unprefixed 'hidden' and 'visibilityState' instead.
+PrefixedVisibilityApiWarning=Ní mholtar 'mozHidden' ná 'mozVisibilityState' a úsáid a thuilleadh. Bain úsáid as 'hidden' agus 'visibilityState' (gan an réimír) ina n-ionad.
 # LOCALIZATION NOTE: Do not translate "NodeIterator" or "detach()".
 NodeIteratorDetachWarning=Calling detach() on a NodeIterator no longer has an effect.
 # LOCALIZATION NOTE: Do not translate "LenientThis" and "this"
 LenientThisWarning=Ignoring get or set of property that has [LenientThis] because the "this" object is incorrect.
 # LOCALIZATION NOTE: Do not translate "nsIDOMWindowUtils", "getWindowWithOuterId", or "nsIWindowMediator"
-GetWindowWithOuterIdWarning=Use of nsIDOMWindowUtils.getOuterWindowWithId() is deprecated. Instead, use the nsIWindowMediator method of the same name.
+GetWindowWithOuterIdWarning=Ní mholtar nsIDOMWindowUtils.getOuterWindowWithId() a úsáid a thuilleadh. Bain úsáid as modh de chuid nsIWindowMediator leis an ainm céanna.
 # LOCALIZATION NOTE: Do not translate "getPreventDefault" or "defaultPrevented".
-GetPreventDefaultWarning=Use of getPreventDefault() is deprecated. Use defaultPrevented instead.
+GetPreventDefaultWarning=Ní mholtar getPreventDefault() a úsáid a thuilleadh. Bain úsáid as defaultPrevented ina ionad.
 # LOCALIZATION NOTE: Do not translate "getUserData", "setUserData", "WeakMap", or "element.dataset".
-GetSetUserDataWarning=Use of getUserData() or setUserData() is deprecated. Use WeakMap or element.dataset instead.
+GetSetUserDataWarning=Ní mholtar getUserData() ná setUserData() a úsáid a thuilleadh. Bain úsáid as WeakMap nó element.dataset ina n-ionad.
 # LOCALIZATION NOTE: Do not translate "mozGetAsFile" or "toBlob"
 MozGetAsFileWarning=The non-standard mozGetAsFile method is deprecated and will soon be removed. Use the standard toBlob method instead.
 # LOCALIZATION NOTE: Do not translate "captureEvents()" or "addEventListener()"
@@ -147,7 +147,7 @@ UseOfDOM3LoadMethodWarning=Use of document.load() is deprecated. To upgrade your
 # LOCALIZATION NOTE: Do not translate "window.showModalDialog()" or "window.open()" 
 ShowModalDialogWarning=Ní mholtar window.showModalDialog() a úsáid a thuilleadh. Bain úsáid as window.open() ina ionad. Chun tuilleadh eolais a fháil, tabhair cuairt ar https://developer.mozilla.org/en-US/docs/Web/API/Window.open
 # LOCALIZATION NOTE: Do not translate "window._content" or "window.content"
-Window_ContentWarning=window._content is deprecated. Please use window.content instead.
+Window_ContentWarning=Ní mholtar window._content a úsáid a thuilleadh. Bain úsáid as window.content ina ionad.
 # LOCALIZATION NOTE: Do not translate "XMLHttpRequest"
 SyncXMLHttpRequestWarning=Synchronous XMLHttpRequest on the main thread is deprecated because of its detrimental effects to the end user's experience. For more help http://xhr.spec.whatwg.org/
 # LOCALIZATION NOTE: Do not translate "DataContainerEvent" or "CustomEvent"
