--- a/ga-IE/services/sync/sync.properties
+++ b/ga-IE/services/sync/sync.properties
@@ -40,9 +40,9 @@ error.sync.viewQuotaButton.label = Féach ar Chuóta
 error.sync.viewQuotaButton.accesskey = F
 warning.sync.eol.label = Seirbhís á Dúnadh
 # %1: the app name (Firefox)
-warning.sync.eol.description = Your Firefox Sync service is shutting down soon. Upgrade %1$S to keep syncing.
+warning.sync.eol.description = Dúnfar an leagan de Firefox Sync atá agat go luath. Ní mór duit %1$S a nuashonrú chun leanúint leis an siocrónú.
 error.sync.eol.label = Níl an tSeirbhís ar fáil
 # %1: the app name (Firefox)
-error.sync.eol.description = Your Firefox Sync service is no longer available. You need to upgrade %1$S to keep syncing.
+error.sync.eol.description = Níl an leagan de Firefox Sync atá agat ar fáil a thuilleadh. Ní mór duit %1$S a nuashonrú chun leanúint leis an siocrónú.
 sync.eol.learnMore.label = Tuilleadh eolais
 sync.eol.learnMore.accesskey = L
