--- a/de/webapprt/webapprt/overrides/appstrings.properties
+++ b/de/webapprt/webapprt/overrides/appstrings.properties
@@ -30,6 +30,6 @@ externalProtocolChkMsg=Diese Entscheidung für alle Links dieses Typs merken.
 externalProtocolLaunchBtn=Anwendung ausführen
 malwareBlocked=Die Seite auf %S wurde als attackierende Seite gemeldet und auf Grund Ihrer Sicherheitseinstellungen blockiert.
 phishingBlocked=Die Website auf %S ist als eine gefälschte Seite gemeldet, die erstellt wurde, um Anwender dazu zu verleiten, persönliche oder finanzielle Daten preiszugeben.
-cspFrameAncestorBlocked=Diese Anwendung versucht auf eine Ressource zuzugreifen, welche über eine Inhaltsicherheitsrichtlinie (Content Security Policy) verfügt, die eine Einbettung dieser Art verhindert.
+cspBlocked=Diese Anwendung versucht auf eine Ressource zuzugreifen, welche über eine Inhaltsicherheitsrichtlinie (Content Security Policy) verfügt, die eine Einbettung dieser Art verhindert.
 corruptedContentError=Die Anwendung kann nicht weiter geladen werden, da ein Fehler in der Datenübertragung festgestellt wurde.
 remoteXUL=Diese Anwendung hat versucht, eine nicht mehr unterstützte Technik (Remote-XUL) zu verwenden.
