Bug 1117717 - Firefox Desktop 36: toolkit. r=KaiRo

--- a/de/toolkit/chrome/global/aboutSupport.properties
+++ b/de/toolkit/chrome/global/aboutSupport.properties
@@ -82,3 +82,7 @@ webglRenderer = WebGL-Renderer
 
 minLibVersions = Minimal vorausgesetzte Version
 loadedLibVersions = Verwendete Version
+
+hasSeccompBPF = Seccomp-BPF (Filtern von Systemaufrufen)
+canSandboxContent = Inhaltsprozesse in isolierter Umgebung
+canSandboxMedia = Medienplugins in isolierter Umgebung
