--- a/de/toolkit/chrome/global/aboutTelemetry.properties
+++ b/de/toolkit/chrome/global/aboutTelemetry.properties
@@ -7,6 +7,10 @@
 # - %2$S will be replaced with the value of the toolkit.telemetry.server_owner preference
 pageSubtitle = Diese Seite zeigt durch Telemetrie gesammelte Informationen über Performanz, Hardware, Benutzung und vom Benutzer gemachte Änderungen an. Diese Informationen werden an %1$S gesendet, um %2$S zu verbessern.
 
+generalDataHeadingName = Name
+
+generalDataHeadingValue = Wert
+
 slowSqlMain = Langsame SQL-Befehle auf Haupt-Thread
 
 slowSqlOther = Langsame SQL-Befehle auf Hilfs-Thread
