Bug 1117717 - Firefox Desktop 36: browser. r=KaiRo

--- a/de/browser/chrome/browser/browser.properties
+++ b/de/browser/chrome/browser/browser.properties
@@ -295,7 +295,7 @@ identity.identified.verified_by_you=Sie haben eine Sicherheitsausnahme für dies
 identity.identified.state_and_country=%S, %S
 
 identity.encrypted2=Die Verbindung zu dieser Website ist sicher.
-identity.mixed_display_loaded=Die Verbindung zu dieser Website ist nicht vollständig sicher, weil sie unverschlüsselte Elemente enthält (z.B. Grafiken).
+identity.broken_loaded=Die Verbindung zu dieser Website ist nicht vollständig sicher, weil sie unverschlüsselte Elemente enthält (z.B. Grafiken) oder die Verschlüsselung nicht stark genug ist.
 identity.mixed_active_loaded2=Diese Website enthält interaktiven Inhalt (wie z.B. ein Skript), der unverschlüsselt übertragen wurde. Andere Personen können Ihre Informationen einsehen oder das Verhalten der Website verändern.
 identity.unencrypted=Ihre Verbindung zu dieser Website ist nicht verschlüsselt.
 
