--- a/de/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/de/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -97,8 +97,10 @@ quit-button.tooltiptext.linux2 = %1$S beenden (%2$S)
 # %2$S is the keyboard shortcut
 quit-button.tooltiptext.mac = %1$S beenden (%2$S)
 
-loop-call-button2.label = Gespräch beginnen
-loop-call-button2.tooltiptext = Gespräch beginnen
+# LOCALIZATION NOTE(loop-call-button3.label): This is a brand name, request
+# approval before you change it.
+loop-call-button3.label = Hello
+loop-call-button3.tooltiptext = Gespräch beginnen
 
 social-share-button.label = Seite teilen
 social-share-button.tooltiptext = Diese Seite teilen
@@ -111,5 +113,6 @@ web-apps-button.tooltiptext = Apps entdecken
 
 # LOCALIZATION NOTE(devtools-webide-button.label, devtools-webide-button.tooltiptext):
 # widget is only visible after WebIDE has been started once (Tools > Web Developers > WebIDE)
-devtools-webide-button.label = WebIDE
-devtools-webide-button.tooltiptext = WebIDE öffnen
+# %S is the keyboard shortcut
+devtools-webide-button2.label = WebIDE
+devtools-webide-button2.tooltiptext = WebIDE öffnen (%S)
