--- a/de/browser/chrome/browser/shellservice.properties
+++ b/de/browser/chrome/browser/shellservice.properties
@@ -17,7 +17,12 @@ setDefaultBrowserNotNow.accesskey  = N
 setDefaultBrowserNever.label       = Nicht mehr nachfragen
 setDefaultBrowserNever.accesskey   = m
 
-
+# LOCALIZATION NOTE (setDefaultBrowserTitle, setDefaultBrowserMessage, setDefaultBrowserDontAsk):
+# These strings are used as an alternative to the ones above, in a modal dialog.
+# %S will be replaced by brandShortName
+setDefaultBrowserTitle=Standardbrowser
+setDefaultBrowserMessage=%S ist momentan nicht als Ihr Standardbrowser festgelegt. Möchten Sie ihn zu Ihrem Standardbrowser machen?
+setDefaultBrowserDontAsk=Bei jedem Start von %S überprüfen
 desktopBackgroundLeafNameWin=Desktop-Hintergrund.bmp
 DesktopBackgroundDownloading=Grafik wird gespeichert…
 DesktopBackgroundSet=Hintergrundbild einrichten
