--- a/de/browser/chrome/browser/loop/loop.properties
+++ b/de/browser/chrome/browser/loop/loop.properties
@@ -97,7 +97,8 @@ new_contact_button=Neuer Kontakt
 ## and click the 'New Contact' button to see the fields.
 new_contact_name_placeholder=Name
 new_contact_email_placeholder=E-Mail-Adresse
-new_contact_phone_placeholder=Nummer von Telefon mit Firefox OS
+new_contact_fxos_phone_placeholder=Nummer von Telefon mit Firefox OS
+new_contact_phone_placeholder2=Telefonnummer
 
 contacts_blocked_contacts=Blockierte Kontakte
 
@@ -122,17 +123,13 @@ importing_contacts_progress_button=Wird importiert…
 ## LOCALIZATION NOTE(sync_contacts_button): This button is displayed in place of
 ## importing_contacts_button once contacts have been imported once.
 sync_contacts_button=Kontakte synchronisieren
+
 ## LOCALIZATION NOTE(import_failed_description simple): Displayed when an import of
 ## contacts fails. This is displayed in the error field here:
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
 import_failed_description_simple=Es tut uns leid, der Import der Kontakte schlug fehl.
-## LOCALIZATION NOTE(import_failed_description): Displayed when an import of contacts
-## fails and the user may need more help. In this item, don't translate the part between
-## {{..}} because this will be replaced by the label from import_failed_support_link_label.
-## This is displayed in the error field here:
-## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
-import_failed_description=Es tut uns leid, der Import der Kontakte schlug fehl, bitte lesen Sie unsere {{import_failed_support_link_label}} für weitere Hilfe.
-import_failed_support_link_label=Hilfeseite
+import_failed_description_some=Einige Kontakte konnten nicht importiert werden.
+import_failed_support_button=Hilfe
 
 ## LOCALIZATION NOTE(remove_contact_menu_button): Displayed in the contact list in
 ## a pop-up menu next to the contact's name.
@@ -255,7 +252,7 @@ connection_error_see_console_notification=Anruf fehlgeschlagen; weitere Details 
 ## LOCALIZATION NOTE (legal_text_and_links3): In this item, don't translate the
 ## parts between {{..}} because these will be replaced with links with the labels
 ## from legal_text_tos and legal_text_privacy. clientShortname will be replaced
-## by the brand name, or fall back to client_shortname_fallback
+## by the brand name.
 legal_text_and_links3=Mit der Nutzung {{clientShortname}} stimmen Sie den {{terms_of_use}} \
   und dem {{privacy_notice}} zu.
 legal_text_tos = Nutzungsbedingungen
@@ -309,6 +306,8 @@ rooms_list_delete_tooltip=Gespräch löschen
 rooms_list_deleteConfirmation_label=Sind Sie sicher?
 rooms_list_no_current_conversations=Derzeit keine Gespräche
 rooms_name_this_room_label=Gesprächsnamen vergeben
+rooms_name_this_room_tooltip2=Zum Ändern des Gesprächnamens anklicken
+rooms_name_change_failed_label=Gespräch kann nicht umbenannt werden.
 rooms_new_room_button_label=Gespräch beginnen
 rooms_only_occupant_label=Sie sind die erste Person hier.
 rooms_panel_title=Wählen Sie ein Gespräch oder starten Sie ein neues.
@@ -317,3 +316,4 @@ rooms_room_full_call_to_action_nonFx_label=Laden Sie sich {{brandShortname}} her
 rooms_room_full_call_to_action_label=Erfahren Sie mehr über {{clientShortname}} »
 rooms_room_joined_label=Jemand hat das Gespräch betreten!
 rooms_room_join_label=Gespräch betreten
+rooms_signout_alert=Geöffnete Gespräche werden beendet.
