--- a/de/browser/chrome/overrides/appstrings.properties
+++ b/de/browser/chrome/overrides/appstrings.properties
@@ -31,6 +31,6 @@ externalProtocolChkMsg=Diese Entscheidung für alle Links von diesem Typ merken.
 externalProtocolLaunchBtn=Anwendung ausführen
 malwareBlocked=Die Seite auf %S wurde als attackierende Seite gemeldet und auf Grund Ihrer Sicherheitseinstellungen blockiert.
 phishingBlocked=Die Website auf %S ist gemeldet als Seite, die erstellt wurde, um Anwender dazu zu bringen, persönliche bzw. finanzielle Daten preiszugeben.
-cspFrameAncestorBlocked=Diese Seite hat eine Inhaltsicherheitsrichtlinie (Content Security Policy), die eine Einbettung dieser Art verhindert.
+cspBlocked=Diese Webseite hat eine Inhaltsicherheitsrichtlinie (Content Security Policy), die verhindert, dass die Webseite auf diese Weise eingebunden wird.
 corruptedContentError=Die Seite, die Sie anzusehen versuchen, kann nicht angezeigt werden, da ein Fehler in der Datenübertragung festgestellt wurde.
 remoteXUL=Diese Seite verwendet eine nicht mehr unterstützte Methode (Remote-XUL), die von Firefox standardmäßig nicht mehr angeboten wird.
