Bug 917725 - Consolidate utils.js and PlacesUIUtils.jsm

--- a/sk/suite/chrome/common/places/places.properties
+++ b/sk/suite/chrome/common/places/places.properties
@@ -2,6 +2,13 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
+delete.hostname.true=Odstrániť históriu pre %S
+delete.hostname.false=Odstrániť históriu pre stránku
+delete.hostname.accesskey=h
+delete.domain.true=Odstrániť históriu pre *.%S
+delete.domain.false=Odstrániť históriu pre doménu
+delete.domain.accesskey=d
+
 load-js-data-url-error=Z bezpečnostných dôvodov nemôžu byť adresy obsahujúce údaje alebo JavaScript načítané z okna histórie alebo bočného panela.
 noTitle=(bez názvu)
 
