Bug 1104213 - add stack traces to timeline markers

--- a/sk/browser/chrome/browser/devtools/timeline.properties
+++ b/sk/browser/chrome/browser/devtools/timeline.properties
@@ -65,3 +65,7 @@ timeline.markerDetail.DOMEventPhase=Fáza:
 timeline.markerDetail.DOMEventTargetPhase=Cieľ
 timeline.markerDetail.DOMEventCapturingPhase=Capturing
 timeline.markerDetail.DOMEventBubblingPhase=Bubbling
+timeline.markerDetail.stack=Zásobník:
+timeline.markerDetail.startStack=Zásobník na začiatku:
+timeline.markerDetail.endStack=Zásobník na konci:
+timeline.markerDetail.unknownFrame=<neznáme umiestnenie>
