--- a/uk/mobile/android/chrome/browser.properties
+++ b/uk/mobile/android/chrome/browser.properties
@@ -322,9 +322,9 @@ remoteNotificationGenericName=Програма
 # the remote debugger server is listening.
 remoteNotificationMessage=Слухаю на порту %S
 # LOCALIZATION NOTE (remoteStartNotificationTitle): %S is the name of the app.
-remoteStartNotificationTitle=Activate debugging for %S
+remoteStartNotificationTitle=Активувати зневадження для %S
 # LOCALIZATION NOTE (remoteStartNotificationMessage):
-remoteStartNotificationMessage=Touch to activate remote debugger
+remoteStartNotificationMessage=Торкніться для активації віддаленого зневаджувача
 
 # Helper apps
 helperapps.open=Відкрити
