--- a/de/browser/chrome/browser/devtools/gclicommands.properties
+++ b/de/browser/chrome/browser/devtools/gclicommands.properties
@@ -20,6 +20,10 @@ helpDesc=Hilfe für die verfügbaren Befehle anzeigen
 # explain the contents of the command help table.
 helpAvailable=Verfügbare Befehle
 
+# LOCALIZATION NOTE (notAvailableInE10S) Used in the output of any command that
+# is not compatible with multiprocess mode (E10S).
+notAvailableInE10S=Der Befehl '%1$S' steht im Modus mit mehreren Prozessen (E10S) nicht zur Verfügung.
+
 # LOCALIZATION NOTE (consoleDesc) A very short string used to describe the
 # function of the console command.
 consoleDesc=Befehle, um die Konsole zu kontrollieren
