--- a/de/browser/chrome/browser/devtools/timeline.properties
+++ b/de/browser/chrome/browser/devtools/timeline.properties
@@ -38,4 +38,30 @@ timeline.records=EINTRÄGE
 timeline.label.styles=Stile
 timeline.label.reflow=DOM-Neuberechnung
 timeline.label.paint=Zeichnen
+timeline.label.javascript=Javascript
 timeline.label.domevent=DOM-Ereignis
+timeline.label.consoleTime=Konsole
+
+# LOCALIZATION NOTE (graphs.memory):
+# This string is displayed in the memory graph of the Performance tool,
+# as the unit used to memory consumption. This label should be kept
+# AS SHORT AS POSSIBLE so it doesn't obstruct important parts of the graph.
+graphs.memory=MB
+
+# LOCALIZATION NOTE (timeline.markerDetailFormat):
+# Some timeline markers come with details, like a size, a name, a js function.
+# %1$S is replaced with one of the above label (timeline.label.*) and %2$S
+# with the details. For examples: Paint (200x100), or console.time (FOO)
+timeline.markerDetailFormat=%1$S (%2$S)
+
+# LOCALIZATION NOTE (time.markerDetail.*):
+# Strings used in the waterfall sidebar.
+timeline.markerDetail.start=Start:
+timeline.markerDetail.end=Ende:
+timeline.markerDetail.duration=Dauer:
+timeline.markerDetail.consoleTimerName=Timer-Name:
+timeline.markerDetail.DOMEventType=Ereignstyp:
+timeline.markerDetail.DOMEventPhase=Phase:
+timeline.markerDetail.DOMEventTargetPhase=Target
+timeline.markerDetail.DOMEventCapturingPhase=Capture
+timeline.markerDetail.DOMEventBubblingPhase=Bubbling
