--- a/de/browser/chrome/browser/devtools/toolbox.properties
+++ b/de/browser/chrome/browser/devtools/toolbox.properties
@@ -78,3 +78,8 @@ options.darkTheme.label=Dunkles Theme
 # LOCALIZATION NOTE (options.lightTheme.label)
 # Used as a label for light theme
 options.lightTheme.label=Helles Theme
+
+# LOCALIZATION NOTE (toolbox.noContentProcess.message)
+# Used as a message in the alert displayed when trying to open a browser
+# content toolbox and there is no content process running
+toolbox.noContentProcess.message=Es werden keine Inhaltsprozesse ausgeführt.
