copied new translated strings from Aurora

--- a/uk/mobile/android/chrome/browser.properties
+++ b/uk/mobile/android/chrome/browser.properties
@@ -322,6 +322,10 @@ remoteNotificationGenericName=Програма
 # LOCALIZATION NOTE (remoteNotificationMessage): %S is the port on which
 # the remote debugger server is listening.
 remoteNotificationMessage=Слухаю на порту %S
+# LOCALIZATION NOTE (remoteStartNotificationTitle): %S is the name of the app.
+remoteStartNotificationTitle=Активувати зневадження для %S
+# LOCALIZATION NOTE (remoteStartNotificationMessage):
+remoteStartNotificationMessage=Торкніться для активації віддаленого зневаджувача
 
 # Helper apps
 helperapps.open=Відкрити
