--- a/uk/browser/chrome/browser/browser.properties
+++ b/uk/browser/chrome/browser/browser.properties
@@ -103,13 +103,6 @@ popupShowPopupPrefix=Показати '%S'
 badContentBlocked.blocked.message=%S is blocking content on this page.
 badContentBlocked.notblocked.message=%S is not blocking any content on this page.
 
-# missing plugin installer
-installPlugin.message = Чи бажаєте ви встановити плагін, який необхідний для відображення медіа на цій сторінці?
-installPlugin.button.label=Встановити %S
-installPlugin.button.accesskey=В
-installPlugin.ignoreButton.label=Більше не питати
-installPlugin.ignoreButton.accesskey=Б
-
 crashedpluginsMessage.title=Плагін %S упав.
 crashedpluginsMessage.reloadButton.label=Перезавантажити сторінку
 crashedpluginsMessage.reloadButton.accesskey=П
@@ -438,7 +431,7 @@ syncPromoNotification.addons.description=Ви можете мати доступ
 syncPromoNotification.addons-sync-disabled.description=Ви можете використовувати ваш обліковий запис %S, щоб синхронізувати додатки на багатьох пристроях.\u0020
 
 # Mozilla data reporting notification (Telemetry, Firefox Health Report, etc)
-dataReportingNotification.message       = %1$S автоматично відправляє деякі дані у %2$S, щоб ми могли покращити ваш досвід.
+dataReportingNotification.message       = %1$S автоматично відправляє деякі дані у %2$S, щоб зробити його кращим.
 dataReportingNotification.button.label  = Вибрати чим ділитись
 dataReportingNotification.button.accessKey  = В
 
@@ -560,34 +553,42 @@ getUserMedia.continueSharing.accesskey = Н
 getUserMedia.stopSharing.label = Закрити доступ
 getUserMedia.stopSharing.accesskey = З
 
-getUserMedia.sharingMenu.label = Tabs sharing devices
-getUserMedia.sharingMenu.accesskey = d
-# LOCALIZATION NOTE (getUserMedia.sharingMenuCamera, getUserMedia.sharingMenuCamera,
-#                    getUserMedia.sharingMenuMicrophone, getUserMedia.sharingMenuApplication,
-#                    getUserMedia.sharingMenuScreen, getUserMedia.sharingMenuWindow,
+getUserMedia.sharingMenu.label = Спільне використання вкладок пристроями
+getUserMedia.sharingMenu.accesskey = с
+# LOCALIZATION NOTE (getUserMedia.sharingMenuCamera
+#                    getUserMedia.sharingMenuMicrophone,
+#                    getUserMedia.sharingMenuApplication,
+#                    getUserMedia.sharingMenuScreen,
+#                    getUserMedia.sharingMenuWindow,
 #                    getUserMedia.sharingMenuCameraMicrophone,
 #                    getUserMedia.sharingMenuCameraMicrophoneApplication,
 #                    getUserMedia.sharingMenuCameraMicrophoneScreen,
 #                    getUserMedia.sharingMenuCameraMicrophoneWindow,
+#                    getUserMedia.sharingMenuCameraApplication,
+#                    getUserMedia.sharingMenuCameraScreen,
+#                    getUserMedia.sharingMenuCameraWindow,
 #                    getUserMedia.sharingMenuMicrophoneApplication,
 #                    getUserMedia.sharingMenuMicrophoneScreen,
 #                    getUserMedia.sharingMenuMicrophoneWindow):
 # %S is the website origin (e.g. www.mozilla.org)
-getUserMedia.sharingMenuCamera = %S (camera)
-getUserMedia.sharingMenuMicrophone = %S (microphone)
-getUserMedia.sharingMenuApplication = %S (application)
-getUserMedia.sharingMenuScreen = %S (screen)
-getUserMedia.sharingMenuWindow = %S (window)
-getUserMedia.sharingMenuCameraMicrophone = %S (camera and microphone)
-getUserMedia.sharingMenuCameraMicrophoneApplication = %S (camera, microphone and application)
-getUserMedia.sharingMenuCameraMicrophoneScreen = %S (camera, microphone and screen)
-getUserMedia.sharingMenuCameraMicrophoneWindow = %S (camera, microphone and window)
-getUserMedia.sharingMenuMicrophoneApplication = %S (microphone and application)
-getUserMedia.sharingMenuMicrophoneScreen = %S (microphone and screen)
-getUserMedia.sharingMenuMicrophoneWindow = %S (microphone and window)
+getUserMedia.sharingMenuCamera = %S (камера)
+getUserMedia.sharingMenuMicrophone = %S (мікрофон)
+getUserMedia.sharingMenuApplication = %S (програма)
+getUserMedia.sharingMenuScreen = %S (дисплей)
+getUserMedia.sharingMenuWindow = %S (вікно)
+getUserMedia.sharingMenuCameraMicrophone = %S (камера і мікрофон)
+getUserMedia.sharingMenuCameraMicrophoneApplication = %S (камера, мікрофон і програма)
+getUserMedia.sharingMenuCameraMicrophoneScreen = %S (камера, мікрофон і дисплей)
+getUserMedia.sharingMenuCameraMicrophoneWindow = %S (камера, мікрофон і вікно)
+getUserMedia.sharingMenuCameraApplication = %S (камера і програма)
+getUserMedia.sharingMenuCameraScreen = %S (камера і дисплей)
+getUserMedia.sharingMenuCameraWindow = %S (камера і вікно)
+getUserMedia.sharingMenuMicrophoneApplication = %S (мікрофон і програма)
+getUserMedia.sharingMenuMicrophoneScreen = %S (мікрофон і дисплей)
+getUserMedia.sharingMenuMicrophoneWindow = %S (мікрофон і вікно)
 # LOCALIZATION NOTE(getUserMedia.sharingMenuUnknownHost): this is used for the website
 # origin for the sharing menu if no readable origin could be deduced from the URL.
-getUserMedia.sharingMenuUnknownHost = Unknown origin
+getUserMedia.sharingMenuUnknownHost = Невідоме джерело
 
 # LOCALIZATION NOTE - %S is brandShortName
 slowStartup.message = Схоже, %S щось… повільно… запускається.
@@ -603,3 +604,12 @@ slowStartup.disableNotificationButton.accesskey = Б
 customizeTips.tip0 = %1$S: Ви можете пристосувати %2$S до ваших вподобань. Просто перетягніть будь-який елемент вище на меню чи панель. %3$S про пристосування %2$S.
 customizeTips.tip0.hint = Підказка
 customizeTips.tip0.learnMore = Дізнайтесь більше
+
+# LOCALIZATION NOTE(appmenu.*.description, appmenu.*.label): these are used for
+# the appmenu labels and buttons that appear when an update is staged for
+# installation or a background update has failed and a manual download is required.
+# %S is brandShortName
+appmenu.restartNeeded.description = Restart %S to apply updates
+appmenu.updateFailed.description = Background update failed, please download update
+appmenu.restartBrowserButton.label = Restart %S
+appmenu.downloadUpdateButton.label = Download Update
