[fa] update from Pootle (firefox)

--- a/fa/security/manager/chrome/pipnss/pipnss.properties
+++ b/fa/security/manager/chrome/pipnss/pipnss.properties
@@ -297,6 +297,7 @@ certErrorTrust_UnknownIssuer=گواهی مورد اعتماد نیست زیرا 
 certErrorTrust_MissingChain=گواهی مورد اعتماد نیست زیرا زنجیرهٔ صادرکنندهٔ آن مشخص نیست.
 certErrorTrust_CaInvalid=گواهی مورد اعتماد نیست زیرا توسط گواهی CA نامعتبری صادر شده است.
 certErrorTrust_Issuer=گواهی مورد اعتماد نیست زیرا گواهی صادرکننده مورد اعتماد نیست.
+certErrorTrust_SignatureAlgorithmDisabled=این گواهینامه به دلیل‌ امضا شدن توسط الگوریتمی که به دلیل امن نبودن غیر فعال شده است غیرقابل اطمینان می‌باشد.
 certErrorTrust_ExpiredIssuer=گواهی مورد اعتماد نیست زیرا گواهی صادرکننده منقضی شده است.
 certErrorTrust_Untrusted=منبع گواهی مورد اعتماد نیست.
 
