[hy-AM] update from Pootle (firefox)

--- a/hy-AM/browser/chrome/browser/devtools/styleeditor.properties
+++ b/hy-AM/browser/chrome/browser/devtools/styleeditor.properties
@@ -74,6 +74,7 @@ ToolboxStyleEditor.label=Ոճի խմբագրիչ
 
 # LOCALIZATION NOTE (ToolboxStyleEditor.panelLabel):
 # This is used as the label for the toolbox panel.
+ToolboxStyleEditor.panelLabel=Ոճի խմբագրիչի վահանակ
 
 # LOCALIZATION NOTE (ToolboxStyleEditor.tooltip2):
 # This string is displayed in the tooltip of the tab when the style editor is
