--- a/hy-AM/browser/chrome/browser/devtools/timeline.properties
+++ b/hy-AM/browser/chrome/browser/devtools/timeline.properties
@@ -38,6 +38,7 @@ timeline.records=ԳՐԱՌՈՒՄՆԵՐ
 timeline.label.styles=Ոճեր
 timeline.label.reflow=Reflow
 timeline.label.paint=Տպել
+timeline.label.javascript=Javascript
 timeline.label.domevent=DOM դեպք
 timeline.label.consoleTime=Կառավարակետ
 
@@ -56,3 +57,4 @@ timeline.markerDetailFormat=%1$S (%2$S)
 # LOCALIZATION NOTE (time.markerDetail.*):
 # Strings used in the waterfall sidebar.
 timeline.markerDetail.start=Մեկնարկել.
+timeline.markerDetail.end=End:
