--- a/hy-AM/dom/chrome/layout/css.properties
+++ b/hy-AM/dom/chrome/layout/css.properties
@@ -99,6 +99,8 @@ PEColorSaturationEOF=հագեցում
 PEColorLightnessEOF=լուսավորություն
 PEColorOpacityEOF=անթափանցոլիություն գույնի արժեքի մեջ
 PEExpectedNumber=Սպասում էի համար բայս գտա «%1$S»:
+PEExpectedPosition=Սպասում էր <position>, բայց գտավ '%1$S':
+PEExpectedRadius=Սպասում էր radius, բայց գտավ %1$S:
 PEExpectedCloseParen=Սպասում էի ')' բայս գտա «%1$S»:
 PEDeclEndEOF=';' կամ '}' հռչակագիրն ավարտելու համար
 PEParseDeclarationNoColon=Սպասում էի ':' բայց գտա «%1$S»:
