--- a/hy-AM/toolkit/chrome/global/aboutSupport.properties
+++ b/hy-AM/toolkit/chrome/global/aboutSupport.properties
@@ -83,3 +83,4 @@ webglRenderer = WebGL Նյութավորիչ
 minLibVersions = Ակնկալվող նվազագույն տարբերակը
 loadedLibVersions = Օգտագործվող տարբերակը
 
+hasSeccompBPF = Seccomp-BPF (System Call Filtering)
