--- a/hy-AM/toolkit/chrome/search/search.properties
+++ b/hy-AM/toolkit/chrome/search/search.properties
@@ -2,9 +2,9 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-addEngineConfirmTitle=Ավելացնել որոնողական որոնիչ
-addEngineConfirmation=Ավելացնե՞լ %S-ը վահանակի որոնման հանգույցների ցանկում։\n\nԱղբյուրը. %S
-addEngineAsCurrentText=Սա դարձնել որպես որոնման գ&ործող հանգույց
+addEngineConfirmTitle=Ավելացնել որոնիչ
+addEngineConfirmation=Ավելացնե՞լ %S-ը վահանակի որոնիչների ցանկում։\n\nԱղբյուրը. %S
+addEngineAsCurrentText=Սա դարձնել որպես գ&ործող որոնիչ
 addEngineAddButtonLabel=Ավելացնել
 
 error_loading_engine_title=Բեռնման Սխալ
