--- a/hy-AM/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/hy-AM/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -99,7 +99,11 @@ quit-button.tooltiptext.mac = Փակել %1$S (%2$S)-ը
 
 # LOCALIZATION NOTE(loop-call-button3.label): This is a brand name, request
 # approval before you change it.
+loop-call-button3.label = Hello
+loop-call-button3.tooltiptext = Սկսել երկխոսություն
 
+social-share-button.label = Համօգտագործել էջը
+social-share-button.tooltiptext = Համօգտագործել էջը
 
 panic-button.label = Մոռանալ
 panic-button.tooltiptext = Մոռանալ դիտարկման որոշ պատմությունը
@@ -111,3 +115,4 @@ web-apps-button.tooltiptext = Բացահայտել հավելվածներ
 # widget is only visible after WebIDE has been started once (Tools > Web Developers > WebIDE)
 # %S is the keyboard shortcut
 devtools-webide-button2.label = WebIDE
+devtools-webide-button2.tooltiptext = Բացել WebIDE (%S)
