--- a/pt-BR/browser/chrome/browser/browser.properties
+++ b/pt-BR/browser/chrome/browser/browser.properties
@@ -154,9 +154,13 @@ pluginInfo.unknownPlugin=Desconhecido
 # LOCALIZATION NOTE (pluginActivateNow.label): This button will enable the
 # plugin in the current session for an short time (about an hour), auto-renewed
 # if the site keeps using the plugin.
+pluginActivateNow.label=Permitir agora
+pluginActivateNow.accesskey=P
 # LOCALIZATION NOTE (pluginActivateAlways.label): This button will enable the
 # plugin for a long while (90 days), auto-renewed if the site keeps using the
 # plugin.
+pluginActivateAlways.label=Permitir e memorizar
+pluginActivateAlways.accesskey=m
 pluginBlockNow.label=Bloquear plugin
 pluginBlockNow.accesskey=B
 pluginContinue.label=Continuar permitindo
@@ -198,7 +202,7 @@ sanitizeSelectedWarning=Todos os itens selecionados serão limpos.
 # LOCALIZATION NOTE (downloadAndInstallButton.label): %S is replaced by the
 # version of the update: "Update to 28.0".
 update.downloadAndInstallButton.label=Atualizar para %S
-update.downloadAndInstallButton.accesskey=u
+update.downloadAndInstallButton.accesskey=A
 
 # RSS Pretty Print
 feedShowFeedNew=Inscrever “%S”…
@@ -356,8 +360,14 @@ pointerLock.autoLock.title2=O %S ocultará o ponteiro.
 # LOCALIZATION NOTE (notAForgery, notAnAttack)
 # The two button strings will never be shown at the same time, so
 # it's okay for them to have the same access key
+safebrowsing.getMeOutOfHereButton.label=Me tire daqui!
+safebrowsing.getMeOutOfHereButton.accessKey=M
 safebrowsing.reportedWebForgery=Página avaliada como falsa!
+safebrowsing.notAForgeryButton.label=Reportar este alerta de site falso como incorreto…
+safebrowsing.notAForgeryButton.accessKey=f
 safebrowsing.reportedAttackSite=Página avaliada como foco de ataques!
+safebrowsing.notAnAttackButton.label=Reportar este alerta de foco de ataques como incorreto…
+safebrowsing.notAnAttackButton.accessKey=a
 
 # Ctrl-Tab
 # LOCALIZATION NOTE (ctrlTab.showAll.label): #1 represents the number
@@ -421,6 +431,8 @@ syncPromoNotification.addons-sync-disabled.description=Você pode usar sua conta
 
 # Mozilla data reporting notification (Telemetry, Firefox Health Report, etc)
 dataReportingNotification.message       = O %1$S automaticamente envia alguns dados para a %2$S de forma que possamos aprimorar sua experiência.
+dataReportingNotification.button.label  = Escolher o que compartilhar
+dataReportingNotification.button.accessKey  = E
 
 # Webapps notification popup
 webapps.install = Instalar
@@ -450,7 +462,7 @@ service.toolbarbutton.tooltiptext=Serviços
 # LOCALIZATION NOTE (social.install.description): %1$S is the hostname of the social provider, %2$S is brandShortName (e.g. Firefox)
 service.install.description=Deseja ativar serviços do %1$S para exibição nas barras de ferramentas e painéis do %2$S?
 service.install.ok.label=Ativar serviços
-service.install.ok.accesskey=e
+service.install.ok.accesskey=t
 
 # LOCALIZATION NOTE (social.markpageMenu.label): %S is the name of the social provider
 social.markpageMenu.label=Salvar página no %S
@@ -473,8 +485,8 @@ identity.privacyPolicy = Política de privacidade
 # LOCALIZATION NOTE (identity.chooseIdentity.description): %S is the website origin (e.g. https://www.mozilla.org) shown in popup notifications.
 identity.chooseIdentity.description = Identificar-se no %S
 identity.chooseIdentity.label = Usar um email existente
-identity.newIdentity.label = Use um email diferente
-identity.newIdentity.accessKey = e
+identity.newIdentity.label = Usar um email diferente
+identity.newIdentity.accessKey = U
 identity.newIdentity.email.placeholder = Email
 # LOCALIZATION NOTE (identity.newIdentity.description): %S is the website origin (e.g. https://www.mozilla.org) shown in popup notifications.
 identity.newIdentity.description = Forneça seu endereço de email para identificar-se em %S
