[ro] update from Pootle (mobile)

--- a/ro/browser/chrome/browser/devtools/webide.properties
+++ b/ro/browser/chrome/browser/devtools/webide.properties
@@ -23,6 +23,7 @@ project_tab_loading=Încărcare…
 
 # Variable: error message (in english)
 
+
 addons_stable=stabil
 addons_unstable=instabil
 # LOCALIZATION NOTE (addons_simulator_label): This label is shown as the name of
@@ -36,3 +37,5 @@ addons_status_installed=Instalat
 
 # Validation status
 status_error=ERRORS
+
+# Preferences
