--- a/ro/mobile/android/chrome/browser.properties
+++ b/ro/mobile/android/chrome/browser.properties
@@ -82,7 +82,6 @@ identity.identified.verified_by_you=Ați adăugat o excepție de securitate pent
 identity.identified.state_and_country=%S, %S
 identity.identified.title_with_country=%S (%S)
 identity.encrypted2=Criptat
-identity.ownerUnknown3=necunoscut
 
 # Geolocation UI
 geolocation.dontAllow=Nu împărtăși
@@ -135,6 +134,7 @@ newprivatetabpopup.opened=O filă nouă fără urme deschisă;#1 file noi fără
 
 # LOCALIZATION NOTE (newtabpopup.switch): Ideally, this string is short (it's a
 # button label) and upper-case, to match Google and Android's convention.
+newtabpopup.switch=SCHIMBA
 
 # Undo close tab toast
 # LOCALIZATION NOTE (undoCloseToast.message): This message appears in a toast
