--- a/ro/security/manager/chrome/pippki/pippki.properties
+++ b/ro/security/manager/chrome/pippki/pippki.properties
@@ -73,18 +73,11 @@ pageInfo_NoEncryption=Conexiune necriptată
 pageInfo_Privacy_None1=Saitul web %S nu suportă criptare pentru pagina pe care o vedeți.
 pageInfo_Privacy_None2=Informațiile trimise prin internet fără criptare pot fi văzute și de alte persoane în timpul tranzitului.\u00A0
 pageInfo_Privacy_None3=Pagina pe care o vedeți nu este criptată.
-# LOCALIZATION NOTE (pageInfo_StrongEncryptionWithBits): %1$S is the name of the encryption standard,
+# LOCALIZATION NOTE (pageInfo_EncryptionWithBitsAndProtocol): %1$S is the name of the encryption standard,
 # %2$S is the key size of the cipher.
-pageInfo_StrongEncryptionWithBits=Conexiune criptată: criptare de grad înalt (%1$S, chei pe %2$S biți)
-pageInfo_Privacy_Strong1=Pagina pe care o vedeți a fost criptată înainte de a fi transmisă prin internet.
-pageInfo_Privacy_Strong2=Criptarea face foarte dificilă interceptarea de către persoane neautorizate a informațiilor vehiculate între calculatoare. Este deci foarte puțin probabil ca altcineva să citească această pagină așa cum a fost transmisă prin rețea.
-# LOCALIZATION NOTE (pageInfo_WeakEncryptionWithBits): %1$S is the name of the encryption standard,
-# %2$S is the key size of the cipher.
-pageInfo_WeakEncryptionWithBits=Conexiune criptată: criptare de grad mic (%1$S, chei pe %2$S biți)
-pageInfo_Privacy_Weak1=Saitul web %S folosește criptare de slabă calitate pentru pagina pe care o vedeți.
-pageInfo_Privacy_Weak2=Criptarea de slabă calitate poate permite unor persoane neautorizate să vadă aceste informații.
+# %3$S is protocol version like "SSL 3" or "TLS 1.2"
+pageInfo_Privacy_Encrypted1=Pagina pe care o vedeți a fost criptată înainte de a fi transmisă prin internet.
 pageInfo_MixedContent=Conexiune criptată parțial
-pageInfo_Privacy_Mixed1=Unele părți din pagina pe care o vedeți nu au fost criptate înainte de a fi transmise prin internet.
 
 #Cert Viewer
 certDetails=Vizualizator certificate:
@@ -151,17 +144,12 @@ writeFileUnknownError=Eroare necunoscută
 addExceptionBrandedWarning2=Sunteți pe cale să schimbați modul în care %S identifică saitul.
 addExceptionInvalidHeader=Acest sait încearcă să se identifice cu informație invalidă.
 addExceptionDomainMismatchShort=Sait greșit
-addExceptionDomainMismatchLong=Certificatul aparține unui sait diferit, ceea ce ar putea indica furt de identitate.
 addExceptionExpiredShort=Informație expirată
-addExceptionExpiredLong=Certificatul nu este actualmente valid. Este imposibil de verificat dacă această identitate a fost raportată ca furată sau pierdută.
 addExceptionUnverifiedOrBadSignatureShort=Identitate necunoscută
-addExceptionUnverifiedOrBadSignatureLong=Certificatul nu este de încredere, deoarece nu a fost verificat de către o autoritate recunoscută utilizând o semnătură securizată.
 addExceptionValidShort=Certificat valid
 addExceptionValidLong=Acest sait furnizează o identificare validă și verificată. Nu e nevoie să adăugați o excepție.
 addExceptionCheckingShort=Se verifică informația
-addExceptionCheckingLong=Se încearcă identificarea saitului...
 addExceptionNoCertShort=Nicio informație disponibilă
-addExceptionNoCertLong=Nu se poate obține identificarea pentru saitul dat.
 addExceptionConnectionFailed=Conexiune eșuată
 
 #Certificate Exists in database
