--- a/ro/toolkit/chrome/global/aboutTelemetry.properties
+++ b/ro/toolkit/chrome/global/aboutTelemetry.properties
@@ -7,6 +7,9 @@
 # - %2$S will be replaced with the value of the toolkit.telemetry.server_owner preference
 pageSubtitle = Această pagină arată informațiile colectate prin telemetrie despre performanță, hardware, utilizare și personalizări. Aceste informații sunt transmise la %1$S pentru a ajuta la îmbunătățirea %2$S.
 
+generalDataHeadingName = Nume
+
+
 slowSqlMain = Declarații SQL lente din firul principal
 
 slowSqlOther = Declarații SQL lente din firele asistente
@@ -46,7 +49,6 @@ enableTelemetry = Activează telemetria
 
 keysHeader = Proprietate
 
-valuesHeader = Valoare
 
 addonTableID = ID supliment
 
