--- a/ro/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/ro/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -97,11 +97,9 @@ quit-button.tooltiptext.linux2 = Închidere %1$S (%2$S)
 # %2$S is the keyboard shortcut
 quit-button.tooltiptext.mac = Închidere %1$S (%2$S)
 
-loop-call-button2.label = Pornește o conversație
-loop-call-button2.tooltiptext = Pornește o conversație
+# LOCALIZATION NOTE(loop-call-button3.label): This is a brand name, request
+# approval before you change it.
 
-social-share-button.label = Împărtășește această pagină
-social-share-button.tooltiptext = Împărtășește această pagină
 
 panic-button.label = Uită
 
@@ -110,5 +108,5 @@ web-apps-button.tooltiptext = Descoperă aplicații
 
 # LOCALIZATION NOTE(devtools-webide-button.label, devtools-webide-button.tooltiptext):
 # widget is only visible after WebIDE has been started once (Tools > Web Developers > WebIDE)
-devtools-webide-button.label = WebIDE
-devtools-webide-button.tooltiptext = Deschide WebIDE
+# %S is the keyboard shortcut
+devtools-webide-button2.label = WebIDE
