--- a/ro/browser/chrome/browser/devtools/toolbox.properties
+++ b/ro/browser/chrome/browser/devtools/toolbox.properties
@@ -76,3 +76,7 @@ options.darkTheme.label=Temă închisă
 # LOCALIZATION NOTE (options.lightTheme.label)
 # Used as a label for light theme
 options.lightTheme.label=Temă luminoasă
+
+# LOCALIZATION NOTE (toolbox.noContentProcess.message)
+# Used as a message in the alert displayed when trying to open a browser
+# content toolbox and there is no content process running
