--- a/ro/browser/chrome/browser/shellservice.properties
+++ b/ro/browser/chrome/browser/shellservice.properties
@@ -10,6 +10,12 @@ safeModeLabel=%S î&n siguranță
 setDefaultBrowserOptions.label     = Opțiuni
 setDefaultBrowserOptions.accesskey = O
 
+# LOCALIZATION NOTE (setDefaultBrowserTitle, setDefaultBrowserMessage, setDefaultBrowserDontAsk):
+# These strings are used as an alternative to the ones above, in a modal dialog.
+# %S will be replaced by brandShortName
+setDefaultBrowserTitle=Navigator implicit
+setDefaultBrowserMessage=%S nu este navigatorul dumneavoastră implicit. Doriți ca acesta să fie implicit?
+setDefaultBrowserDontAsk=Verifică întotdeauna la pornirea %S.
 
 desktopBackgroundLeafNameWin=Fundal desktop.bmp
 DesktopBackgroundDownloading=Se salvează poza...
