--- a/ro/dom/chrome/dom/dom.properties
+++ b/ro/dom/chrome/dom/dom.properties
@@ -174,3 +174,4 @@ DataContainerEventWarning=Utilizarea DataContainerEvent este învechită. Utiliz
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "FastFwd" and "MediaFastForward".
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Zoom" and "ZoomToggle".
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key" and "Dead".
+# LOCALIZATION NOTE: Do not translate "IndexedDB".
