--- a/ro/dom/chrome/security/security.properties
+++ b/ro/dom/chrome/security/security.properties
@@ -8,6 +8,7 @@ BlockMixedActiveContent = Blocată încărcarea conținutului activ mixt "%1$S"
 # LOCALIZATION NOTE: Do not translate "Strict-Transport-Security" or "HSTS"
 InvalidSTSHeaders=Saitul specifică un antet Strict-Transport-Security invalid.
 # LOCALIZATION NOTE: Do not translate "Public-Key-Pins or HPKP"
+# LOCALIZATION NOTE: Do not translate "SHA-1"
 InsecurePasswordsPresentOnPage=Password fields present on an insecure (http://) page. This is a security risk that allows user login credentials to be stolen.
 InsecureFormActionPasswordsPresent=Password fields present in a form with an insecure (http://) form action. This is a security risk that allows user login credentials to be stolen.
 InsecurePasswordsPresentOnIframe=Password fields present on an insecure (http://) iframe. This is a security risk that allows user login credentials to be stolen.
