New strings for Firefox + corrections

--- a/da/browser/chrome/browser/places/places.properties
+++ b/da/browser/chrome/browser/places/places.properties
@@ -89,6 +89,6 @@ searchengineResultLabel=Søgning
 # LOCALIZATION NOTE (lockPrompt.text)
 # %S will be replaced with the application name.
 lockPrompt.title=Browser opstartsfejl
-lockPrompt.text=Bogmærker og historik vil ikke være funktionelt da en af %Ss filer er i brug af et andet program. Visse sikkerhedssoftware kan være skyld i dette.
+lockPrompt.text=Bogmærker og historik vil ikke virke, da en  %S-fil er i brug af et andet program. Visse sikkerhedsprogrammer kan være skyld i dette.
 lockPromptInfoButton.label=Lær mere
 lockPromptInfoButton.accessKey=L
