--- a/da/browser/chrome/browser/loop/loop.properties
+++ b/da/browser/chrome/browser/loop/loop.properties
@@ -98,6 +98,7 @@ new_contact_button=Ny kontakt
 new_contact_name_placeholder=Navn
 new_contact_email_placeholder=Mailadresse
 new_contact_fxos_phone_placeholder=Firefox OS-telefon
+new_contact_phone_placeholder2=Telefon
 
 contacts_blocked_contacts=Blokerede kontakter
 
