--- a/uk/browser/chrome/browser/places/places.properties
+++ b/uk/browser/chrome/browser/places/places.properties
@@ -76,15 +76,16 @@ OrganizerQueryAllBookmarks=Всі закладки
 OrganizerQueryTags=Мітки
 
 # LOCALIZATION NOTE (tagResultLabel) :
+# keywordResultLabel, searchengineResultLabel)
 # Noun used to describe the location bar autocomplete result type
 # to users with screen readers
-# See createResultLabel() in urlbarBindings.xml 
+# See createResultLabel() in urlbarBindings.xml
 tagResultLabel=Мітка
-# LOCALIZATION NOTE (bookmarkResultLabel) :
-# Noun used to describe the location bar autocomplete result type
-# to users with screen readers
-# See createResultLabel() in urlbarBindings.xml 
 bookmarkResultLabel=Закладка
+switchtabResultLabel=Tab
+keywordResultLabel=Keyword
+searchengineResultLabel=Search
+
 
 # LOCALIZATION NOTE (lockPrompt.text)
 # %S will be replaced with the application name.
