--- a/uk/browser/chrome/browser/shellservice.properties
+++ b/uk/browser/chrome/browser/shellservice.properties
@@ -17,6 +17,12 @@ setDefaultBrowserNotNow.accesskey  = е
 setDefaultBrowserNever.label       = Не питати знову
 setDefaultBrowserNever.accesskey   = з
 
+# LOCALIZATION NOTE (setDefaultBrowserTitle, setDefaultBrowserMessage, setDefaultBrowserDontAsk):
+# These strings are used as an alternative to the ones above, in a modal dialog.
+# %S will be replaced by brandShortName
+setDefaultBrowserTitle=Default Browser
+setDefaultBrowserMessage=%S is not currently set as your default browser. Would you like to make it your default browser?
+setDefaultBrowserDontAsk=Always perform this check when starting %S.
 
 desktopBackgroundLeafNameWin=Desktop Background.bmp
 DesktopBackgroundDownloading=Зберігається зображення…
