--- a/uk/browser/chrome/overrides/appstrings.properties
+++ b/uk/browser/chrome/overrides/appstrings.properties
@@ -31,5 +31,6 @@ externalProtocolChkMsg=Запам’ятати вибір для всіх пос
 externalProtocolLaunchBtn=Запустити програму
 malwareBlocked=Сайт %S відомий як зловмисний і тому був заблокований згідно з вашими вподобаннями безпеки.
 phishingBlocked=Сайт %S відомий як навмисна підробка, націлена на видурювання особистої або фінансової інформації.
+cspBlocked=This page has a content security policy that prevents it from being loaded in this way.
 corruptedContentError=Сторінку, яку ви намагаєтесь переглянути, неможливо відобразити через те, що у передачі даних виявлено помилку.
 remoteXUL=Ця сторінка використовує непідтримувану технологію, яка більше недоступна як типова у Firefox.
