--- a/da/browser/chrome/browser/devtools/gcli.properties
+++ b/da/browser/chrome/browser/devtools/gcli.properties
@@ -267,8 +267,8 @@ prefShowSettingValue=%1$S: %2$S
 # LOCALIZATION NOTE (prefSetDesc, prefSetManual, prefSetSettingDesc,
 # prefSetSettingManual, prefSetValueDesc, prefSetValueManual): These strings
 # describe the 'pref set' command and all its parameters.
-prefSetDesc=Ændr en indstilling
-prefSetManual=Ændr indstillinger defineret af miljøet
+prefSetDesc=Skift en indstilling
+prefSetManual=Skift indstillinger defineret af miljøet
 prefSetSettingDesc=Indstilling der skal ændres
 prefSetSettingManual=Navnet på indstillingen der skal ændres.
 prefSetValueDesc=Ny værdi for indstillingen
