--- a/da/browser/chrome/browser/browser.properties
+++ b/da/browser/chrome/browser/browser.properties
@@ -64,7 +64,7 @@ addonLocalError-2=Denne tilføjelse kunne ikke installeres da den ikke matcher d
 addonLocalError-3=Denne tilføjelse kunne ikke installeres da den synes at være ødelagt.
 addonLocalError-4=#1 kunne ikke installeres da #3 ikke kan redigere den nødvendige fil.
 addonErrorIncompatible=#1 kunne ikke installeres da den ikke er kompatibel med #3 #4.
-addonErrorBlocklisted=#1 kunne ikke installeres da der er høj risiko for at den foresager stabilitets- eller sikkerhedsproblemer.
+addonErrorBlocklisted=#1 kunne ikke installeres da der er høj risiko for at den forårsager stabilitets- eller sikkerhedsproblemer.
 
 # LOCALIZATION NOTE (lwthemeInstallRequest.message): %S will be replaced with
 # the host name of the site.
