Fixes and suggestions from Marek Laane

--- a/et/netwerk/necko.properties
+++ b/et/netwerk/necko.properties
@@ -38,4 +38,4 @@ PhishingAuthAccept=Mõistan ja olen väga ettevaatlik
 SuperfluousAuth=Sa sisened veebilehele "%1$S" kasutajanimega "%2$S", kuid see veebileht ei nõuagi autentimist. See võib olla katse sind alt tõmmata.\n\nKas "%1$S" on ikka leht, mida soovid külastada?
 AutomaticAuth=Sa sisened veebilehele "%1$S" kasutajanimega "%2$S".
 
-TrackingUriBlocked=Ressurss aadressil "%1$S" blokiti, sest jälitamise vastane kaitse on lubatud.
+TrackingUriBlocked=Ressurss aadressil "%1$S" blokiti, sest jälitamisvastane kaitse on lubatud.
