--- a/et/mobile/android/chrome/webcompatReporter.properties
+++ b/et/mobile/android/chrome/webcompatReporter.properties
@@ -4,9 +4,9 @@
 
 # LOCALIZATION NOTE (webcompat.menu.name): A "site issue" is a bug, display,
 # or functionality problem with a webpage in the browser.
-webcompat.menu.name=Raporteeri saidil olev viga
+webcompat.menu.name=Anna teada saidil olevast veast
 
 # LOCALIZATION NOTE (webcompat.reportDesktopMode.message): A " site issue" is a
 # bug, display, or functionality problem with a webpage in the browser.
-webcompat.reportDesktopMode.message=Kas raporteerida saidil olevast veast?
-webcompat.reportDesktopModeYes.label=Raporteeri
+webcompat.reportDesktopMode.message=Kas anda teada saidil olevast veast?
+webcompat.reportDesktopModeYes.label=Anna teada
