--- a/et/security/manager/chrome/pippki/pippki.properties
+++ b/et/security/manager/chrome/pippki/pippki.properties
@@ -78,7 +78,7 @@ pageInfo_Privacy_None3=Leht, mida vaatad, pole krüptitud.
 # %3$S is protocol version like "SSL 3" or "TLS 1.2"
 pageInfo_EncryptionWithBitsAndProtocol=Krüptitud ühendus (%1$S, %2$S-bitised võtmed, %3$S)
 pageInfo_Privacy_Encrypted1=Vaadatava lehe sisu krüptiti enne interneti teel edastamist.
-pageInfo_Privacy_Encrypted2=Krüptimine teeb autoriseerimata isikutel arvutite vahel liikuva info vaatamise keeruliseks. Seetõttu on ebatõenäoline, et keegi luges selle lehe sisu võrgus liikumise ajal.
+pageInfo_Privacy_Encrypted2=Krüptimine teeb autoriseerimata isikutel arvutite vahel edastatava info vaatamise keeruliseks. Seetõttu on ebatõenäoline, et keegi luges selle lehe sisu võrgus edastamise ajal.
 pageInfo_MixedContent=Osaliselt krüptitud ühendus
 pageInfo_Privacy_Broken1=Vaadatava veebilehe osasid ei krüptitud (või pole krüpteering piisavalt tugev) enne nende interneti teel edastamist.
 
