--- a/pl/browser/chrome/browser/devtools/projecteditor.properties
+++ b/pl/browser/chrome/browser/devtools/projecteditor.properties
@@ -9,6 +9,7 @@ projecteditor.deleteFolderPromptMessage=Czy na pewno usunąć ten folder?
 projecteditor.deleteFilePromptMessage=Czy na pewno usunąć ten plik?
 projecteditor.deleteLabel=Usuń
 projecteditor.newLabel=Nowy…
+projecteditor.renameLabel=Zmień nazwę
 projecteditor.saveLabel=Zapisz
 projecteditor.saveAsLabel=Zapisz jako…
 projecteditor.selectFileLabel=Wybór pliku
