Bug 1114445 - update sync migration flows to reflect latest requirements

--- a/pl/browser/chrome/browser/accounts.properties
+++ b/pl/browser/chrome/browser/accounts.properties
@@ -7,6 +7,10 @@ needUserLong=Przebudowaliśmy synchronizację, by była łatwiejsza - uaktualnij
 upgradeToFxA.label=Uaktualnij
 upgradeToFxA.accessKey=U
 
+signInAfterUpgradeOnOtherDevice.description=Synchronizacja została uaktualniona na innym urządzeniu przez „%S”. Wznowić synchronizowację?
+signInAfterUpgradeOnOtherDevice.label=Zaloguj się
+signInAfterUpgradeOnOtherDevice.accessKey=Z
+
 needVerifiedUserShort=Adres „%S” nie został zweryfikowany
 needVerifiedUserLong=Otwórz odnośnik weryfikacyjny z wiadomości wysłanej na adres „%S”
 resendVerificationEmail.label=Wyślij ponownie
@@ -14,6 +18,12 @@ resendVerificationEmail.accessKey=W
 
 forgetMigration.label=Usuń
 forgetMigration.accessKey=s
+
+unlinkMigration.label=Odłączyć od synchronizacji
+unlinkMigration.accessKey=O
+unlinkVerificationTitle=Odłączyć od starej wersji synchronizacji?
+unlinkVerificationDescription=Aby uniknąć dalszych przypomnień o aktualiazacji synchronizacji, można odłączyć stare konto Sync, aby je usunąć.
+unlinkVerificationConfirm=Odłącz
 
 verificationSentTitle=Wysłano wiadomość weryfikacyjną
 verificationSentHeading=Odnośnik weryfikacyjny został wysłany na adres „%S”
