Bug 1079227 - Loop feedback form should always allow comments

--- a/pl/browser/chrome/browser/loop/loop.properties
+++ b/pl/browser/chrome/browser/loop/loop.properties
@@ -128,7 +128,7 @@ feedback_category_audio_quality=Jakość dźwięku
 feedback_category_video_quality=Jakość obrazu
 feedback_category_was_disconnected=Zerwane połączenie
 feedback_category_confusing=Zagmatwanie
-feedback_category_other=Inny:
+feedback_category_other2=Inny
 feedback_custom_category_text_placeholder=opis problemu
 feedback_submit_button=Wyślij
 feedback_back_button=Wstecz
