--- a/pl/browser/chrome/browser/preferences/preferences.properties
+++ b/pl/browser/chrome/browser/preferences/preferences.properties
@@ -94,7 +94,7 @@ cannot=Blokuj
 noCookieSelected=<nie zaznaczono ciasteczka>
 cookiesAll=Następujące ciasteczka są przechowywane na tym komputerze:
 cookiesFiltered=Następujące ciasteczka odpowiadają zapytaniu:
-removeSelectedCookies=Usuń zaznaczone;Usuń zaznaczone;Usuń zaznaczone
+removeSelectedCookies=Usuń zaznaczone;Usuń #1 zaznaczone;Usuń #1 zaznaczonych
 
 offlineAppsList.height=7em
 offlineAppRemoveTitle=Usuń dane witryn trybu offline
