--- a/pl/browser/chrome/browser/devtools/timeline.properties
+++ b/pl/browser/chrome/browser/devtools/timeline.properties
@@ -8,10 +8,10 @@ timeline.tooltip=Wydajność na osi czasu
 timeline.tick=%S ms
 
 timeline.records=Zdarzenia
-timeline.label.styles=Styl
-timeline.label.reflow=Reflow
+timeline.label.styles2=Styl
+timeline.label.reflow2=Układ
 timeline.label.paint=Malowanie
-timeline.label.javascript=JavaScript
+timeline.label.javascript2=JavaScript
 timeline.label.domevent=Zdarzenie DOM
 timeline.label.consoleTime=Konsola
 
