--- a/uk/browser/pdfviewer/viewer.properties
+++ b/uk/browser/pdfviewer/viewer.properties
@@ -146,6 +146,7 @@ loading_error_indicator=Помилка
 loading_error=Під час завантаження PDF сталась помилка.
 invalid_file_error=Недійсний або пошкоджений PDF-файл.
 missing_file_error=Відсутній PDF-файл.
+unexpected_response_error=Unexpected server response.
 
 # LOCALIZATION NOTE (text_annotation_type.alt): This is used as a tooltip.
 # "{{type}}" will be replaced with an annotation type from a list defined in
