--- a/uk/dom/chrome/accessibility/AccessFu.properties
+++ b/uk/dom/chrome/accessibility/AccessFu.properties
@@ -29,7 +29,7 @@ list           =       list
 listitem       =       list item
 outline        =       outline
 outlineitem    =       outline item
-pagetab        =       page tab
+pagetab        =       tab
 propertypage   =       property page
 graphic        =       graphic
 pushbutton     =       button
@@ -44,7 +44,7 @@ animation      =       animation
 equation       =       equation
 buttonmenu     =       button menu
 whitespace     =       white space
-pagetablist    =       page tab list
+pagetablist    =       tab list
 canvas         =       canvas
 checkmenuitem  =       check menu item
 label          =       label
@@ -64,7 +64,7 @@ form           =       form
 comboboxlist   =       combo box list
 comboboxoption =       combo box option
 imagemap       =       image map
-listboxoption  =       list box option
+listboxoption  =       option
 listbox        =       list box
 flatequation   =       flat equation
 gridcell       =       gridcell
@@ -94,6 +94,11 @@ listEnd        =       Last item
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 listItemsCount =       1 item;#1 items
 
+# LOCALIZATION NOTE: # %1$S is the position of the item n the set.
+# %2$S is the total number of such items in the set.
+# An expanded example would read "2 of 5".
+objItemOfN      =       %1$S of %2$S
+
 # Landmark announcements
 banner         =       banner
 complementary  =       complementary
@@ -101,6 +106,15 @@ contentinfo    =       content info
 main           =       main
 navigation     =       navigation
 search         =       search
+
+# LOCALIZATION NOTE (tblColumnInfo): Semi-colon list of plural forms.
+# Number of columns within the table.
+# See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+tblColumnInfo = with 1 column;with #1 columns
+# LOCALIZATION NOTE (tblRowInfo): Semi-colon list of plural forms.
+# Number of rows within the table or grid.
+# See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+tblRowInfo = and 1 row;and #1 rows
 
 # table or grid cell information
 columnInfo = Column %S
@@ -143,6 +157,7 @@ statePressed     =    pressed
 stateExpanded    =    expanded
 stateCollapsed   =    collapsed
 stateUnavailable =    unavailable
+stateReadonly    =    readonly
 stateRequired    =    required
 stateTraversed   =    visited
 stateHasPopup    =    has pop up
@@ -172,11 +187,85 @@ quicknav_Table       = Tables
 quicknav_Checkbox    = Check boxes
 
 # Shortened role names for braille
-linkAbbr           =       lnk
-pushbuttonAbbr     =       btn
-passwordtextAbbr   =       passwdtxt
-imagemapAbbr       =       imgmap
-figureAbbr         =       fig
-textareaAbbr       =       txtarea
+menubarAbbr        =       menu bar
+scrollbarAbbr      =       scroll bar
+gripAbbr           =       grip
+alertAbbr          =       alert
+menupopupAbbr      =       menu popup
+documentAbbr       =       document
+paneAbbr           =       pane
+dialogAbbr         =       dialog
+separatorAbbr      =       separator
+toolbarAbbr        =       toolbar
+statusbarAbbr      =       status bar
 tableAbbr          =       tbl
+columnheaderAbbr   =       column header
+rowheaderAbbr      =       row header
+columnAbbr         =       column
+rowAbbr            =       row
+cellAbbr           =       cell
+linkAbbr           =       lnk
+listAbbr           =       list
+listitemAbbr       =       list item
+outlineAbbr        =       outline
+outlineitemAbbr    =       outline item
+pagetabAbbr        =       tab
+propertypageAbbr   =       property page
+graphicAbbr        =       graphic
+pushbuttonAbbr     =       btn
+checkbuttonAbbr    =       check button
+radiobuttonAbbr    =       radio button
+comboboxAbbr       =       combo box
+progressbarAbbr    =       progress bar
+sliderAbbr         =       slider
+spinbuttonAbbr     =       spin button
+diagramAbbr        =       diagram
+animationAbbr      =       animation
+equationAbbr       =       equation
+buttonmenuAbbr     =       button menu
+whitespaceAbbr     =       white space
+pagetablistAbbr    =       tab list
+canvasAbbr         =       canvas
+checkmenuitemAbbr  =       check menu item
+labelAbbr          =       label
+passwordtextAbbr   =       passwdtxt
+radiomenuitemAbbr  =       radio menu item
+textcontainerAbbr  =       text container
+togglebuttonAbbr   =       toggle button
+treetableAbbr      =       tree table
+headerAbbr         =       header
+footerAbbr         =       footer
+paragraphAbbr      =       paragraph
+entryAbbr          =       entry
+captionAbbr        =       caption
+headingAbbr        =       heading
+sectionAbbr        =       section
+formAbbr           =       form
+comboboxlistAbbr   =       combo box list
+comboboxoptionAbbr =       combo box option
+imagemapAbbr       =       imgmap
+listboxoptionAbbr  =       option
+listboxAbbr        =       list box
+flatequationAbbr   =       flat equation
+gridcellAbbr       =       gridcell
+noteAbbr           =       note
+figureAbbr         =       fig
+definitionlistAbbr =       definition list
+termAbbr           =       term
+definitionAbbr     =       definition
+textareaAbbr       =       txtarea
+
+# LOCALIZATION NOTE (tblColumnInfoAbbr): Semi-colon list of plural forms.
+# Number of columns within the table.
+# See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+tblColumnInfoAbbr = #1c;#1c
+# LOCALIZATION NOTE (tblRowInfoAbbr): Semi-colon list of plural forms.
+# Number of rows within the table or grid.
+# See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+tblRowInfoAbbr = #1r;#1r
 cellInfoAbbr = c%Sr%S
+
+stateCheckedAbbr = (x)
+stateUncheckedAbbr = ( )
+statePressedAbbr = (x)
+stateUnpressedAbbr = ( )
