--- a/uk/dom/chrome/layout/css.properties
+++ b/uk/dom/chrome/layout/css.properties
@@ -21,6 +21,8 @@ PEGatherMediaEOF=кінець списку медіа в правилі @import 
 PEGatherMediaNotComma=Очікувалася ',' в списку медіа, але знайдено '%1$S'.
 PEGatherMediaNotIdent=Очікувався ідентифікатор в списку медіа, але знайдено '%1$S'.
 PEGatherMediaReservedMediaType=Found reserved keyword '%1$S' when looking for media type.
+PEParseSourceSizeListEOF=length value for matched media condition
+PEParseSourceSizeListNotComma=Expected ',' after value but found '%1$S'
 PEImportNotURI=Очікувався URI в правилі @import, але знайдено '%1$S'.
 PEImportBadURI=Недійсний URI у правилі @import: '%1$S'.
 PEImportUnexpected=Знайдено несподіване '%1$S' всередині @import.
@@ -44,8 +46,17 @@ PESelectorListExtraEOF=',' або '{'
 PESelectorListExtra=Очікувалися ',' або '{' але знайдено '%1$S'.
 PESelectorGroupNoSelector=Очікується селектор.
 PESelectorGroupExtraCombinator=Завислий комбінатор.
+PECounterStyleNotIdent=Expected identifier for name of @counter-style rule.
+PECounterStyleBadName=Name of @counter-style rule can't be '%1$S'.
+PECounterStyleBadBlockStart=Expected '{' to begin @counter-style rule but found '%1$S'.
+PECounterStyleEOF=closing '}' of @counter-style block
+PECounterDescExpected=Expected counter descriptor but found '%1$S'.
+PEUnknownCounterDesc=Unknown descriptor '%1$S' in @counter-style rule.
+PECounterExtendsNotIdent=Expected identifier for extends system but found '%1$S'.
+PECounterASWeight=Each weight in the additive-symbols descriptor must be smaller than the previous weight.
 PEClassSelEOF=ім’я класу
 PEClassSelNotIdent=Очікувався ідентифікатор для селектора класу, але знайдено '%1$S'.
+PECoordinatePair=Expected coordinate pair but found '%1$S'.
 PETypeSelEOF=тип елементу
 PETypeSelNotType=Очікувалося ім’я елементу або '*', але знайдено '%1$S'.
 PEUnknownNamespacePrefix=Невідомий префікс простору імен '%1$S'.
@@ -95,6 +106,9 @@ PEColorSaturationEOF=насиченість
 PEColorLightnessEOF=яскравість
 PEColorOpacityEOF=непрозорість в значенні кольору
 PEExpectedNumber=Очікувався номер, але знайдено '%1$S'.
+PEPositionEOF=<position>
+PEExpectedPosition=Expected <position> but found '%1$S'.
+PEExpectedRadius=Expected radius but found '%1$S'.
 PEExpectedCloseParen=Очікувалася ')' але знайдено '%1$S'.
 PEDeclEndEOF=';' або '}', що закінчують оголошення
 PEParseDeclarationNoColon=Очікувалося ':', але знайдено '%1$S'.
