--- a/uk/dom/chrome/plugins.properties
+++ b/uk/dom/chrome/plugins.properties
@@ -19,3 +19,6 @@ state_disabled=Вимкнений
 mimetype_label=Тип MIME
 description_label=Опис
 suffixes_label=Суфікси
+
+openH264_name=OpenH264 Video Codec provided by Cisco Systems, Inc.
+openH264_description=Play back web video and use video chats.
