--- a/uk/dom/chrome/security/csp.properties
+++ b/uk/dom/chrome/security/csp.properties
@@ -10,6 +10,13 @@ CSPViolation = The page's settings blocked the loading of a resource: %1$S
 # %1$S is the directive that has been violated.
 # %2$S is the URI of the resource which violated the directive.
 CSPViolationWithURI = The page's settings blocked the loading of a resource at %2$S ("%1$S").
+# LOCALIZATION NOTE (CSPROViolation):
+# %1$S is the reason why the resource has not been loaded.
+CSPROViolation = A violation occurred for a report-only CSP policy ("%1$S"). The behavior was allowed, and a CSP report was sent.
+# LOCALIZATION NOTE (CSPROViolationWithURI):
+# %1$S is the directive that has been violated.
+# %2$S is the URI of the resource which violated the directive.
+CSPROViolationWithURI = The page's settings observed the loading of a resource at %2$S ("%1$S"). A CSP report is being sent.
 # LOCALIZATION NOTE (triedToSendReport):
 # %1$S is the URI we attempted to send a report to.
 triedToSendReport = Tried to send report to invalid URI: "%1$S"
@@ -30,7 +37,7 @@ reportURInotHttpsOrHttp2 = The report URI (%1$S) should be an HTTP or HTTPS URI.
 reportURInotInReportOnlyHeader = This site (%1$S) has a Report-Only policy without a report URI. CSP will not block and cannot report violations of this policy.
 # LOCALIZATION NOTE (failedToParseUnrecognizedSource):
 # %1$S is the CSP Source that could not be parsed
-failedToParseUnrecognizedSource = Failed to parse unrecoginzied source %1$S
+failedToParseUnrecognizedSource = Failed to parse unrecognized source %1$S
 # LOCALIZATION NOTE (inlineScriptBlocked):
 # inline script refers to JavaScript code that is embedded into the HTML document.
 inlineScriptBlocked = An attempt to execute inline scripts has been blocked
@@ -43,7 +50,11 @@ scriptFromStringBlocked = An attempt to call JavaScript from a string (by callin
 # LOCALIZATION NOTE (hostNameMightBeKeyword):
 # %1$S is the hostname in question and %2$S is the keyword
 hostNameMightBeKeyword = Interpreting %1$S as a hostname, not a keyword. If you intended this to be a keyword, use '%2$S' (wrapped in single quotes).
+# LOCALIZATION NOTE (notSupportingDirective):
+# directive is not supported (e.g. 'reflected-xss')
+notSupportingDirective = Not supporting directive '%1$S'. Directive and values will be ignored.
 
+# CSP Errors:
 # LOCALIZATION NOTE (couldntParseInvalidSource):
 # %1$S is the source that could not be parsed
 couldntParseInvalidSource = Couldn't parse invalid source %1$S
