--- a/uk/security/manager/chrome/pippki/pippki.properties
+++ b/uk/security/manager/chrome/pippki/pippki.properties
@@ -73,7 +73,14 @@ pageInfo_NoEncryption=Незашифроване з’єднання
 pageInfo_Privacy_None1=Сайт %S не підтримує шифрування для цієї сторінки.
 pageInfo_Privacy_None2=Інформація, переслана по інтернету без шифрування, може бути перехоплена під час передачі.
 pageInfo_Privacy_None3=Сторінка, котру ви переглядаєте, не зашифрована.
+# LOCALIZATION NOTE (pageInfo_EncryptionWithBitsAndProtocol): %1$S is the name of the encryption standard,
+# %2$S is the key size of the cipher.
+# %3$S is protocol version like "SSL 3" or "TLS 1.2"
+pageInfo_EncryptionWithBitsAndProtocol=Connection Encrypted (%1$S, %2$S bit keys, %3$S)
+pageInfo_Privacy_Encrypted1=The page you are viewing was encrypted before being transmitted over the Internet.
+pageInfo_Privacy_Encrypted2=Encryption makes it difficult for unauthorized people to view information traveling between computers. It is therefore unlikely that anyone read this page as it traveled across the network.
 pageInfo_MixedContent=З’єднання частково зашифроване
+pageInfo_Privacy_Broken1=Parts of the page you are viewing were not encrypted or the encryption is not strong enough before being transmitted over the Internet.
 
 #Cert Viewer
 certDetails=Перегляд сертифікату:
@@ -140,11 +147,16 @@ writeFileUnknownError=Невідома помилка
 addExceptionBrandedWarning2=Ви збираєтесь зневажити те, як %S ідентифікував цей сайт.
 addExceptionInvalidHeader=Цей сайт намагається ідентифікувати себе нечинною інформацією.
 addExceptionDomainMismatchShort=Неправильний сайт
+addExceptionDomainMismatchLong2=The certificate belongs to a different site, which could mean that someone is trying to impersonate this site.
 addExceptionExpiredShort=Застаріла інформація
+addExceptionExpiredLong2=The certificate is not currently valid. It may have been stolen or lost, and could be used by someone to impersonate this site.
 addExceptionUnverifiedOrBadSignatureShort=Невідома особистість
+addExceptionUnverifiedOrBadSignatureLong2=The certificate is not trusted because it hasn't been verified as issued by a trusted authority using a secure signature.
 addExceptionValidShort=Чинний сертифікат
-addExceptionValidLong=Справжність цього сайту чинна та перевірена. Нема потреби додавати виняток.
+addExceptionValidLong=This site provides valid, verified identification.  There is no need to add an exception.
 addExceptionCheckingShort=Перевіряється інформація
+addExceptionCheckingLong2=Attempting to identify this site…
+addExceptionValidLong=Справжність цього сайту чинна та перевірена. Нема потреби додавати виняток.
 addExceptionNoCertShort=Нема наявної інформації
 addExceptionConnectionFailed=Не вдалося встановити зв’язок
 
